updates to README